feature: adicionando mecanismo de upload .txt para criação de posts

--- a/config/locales/views/articles/en.yml
+++ b/config/locales/views/articles/en.yml
@@ -23,3 +23,8 @@ en:
       comments: Comments
       add_comment: "Add a comment:"
       login_create_comment: Please, login to create a comment.
+    upload:
+      title: "Or upload a TXT file to populate the form"
+      upload_button: "Upload file"
+      no_file: "No file was selected."
+      file_error: "Error processing the file: %{error}"
