fix: utilizando turbo load no evento para corrigir bugs com SPA

--- a/config/locales/views/articles/pt-BR.yml
+++ b/config/locales/views/articles/pt-BR.yml
@@ -24,7 +24,7 @@ pt-BR:
       add_comment: "Adicione um comentário:"
       login_create_comment: Por favor, faça o login para criar um comentário.
     upload:
-      title: "Ou carregue um arquivo TXT para preencher o formulário"
+      title: "Ou carregue um arquivo .TXT para preencher o formulário"
       upload_button: "Carregar arquivo"
       no_file: "Nenhum arquivo foi selecionado."
       file_error: "Erro ao processar o arquivo: %{error}"
